grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - name: http
      port: 80          # Ingress traffic port
      targetPort: 3000  # Pod port
  type: ClusterIP
