grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.sujeetkushwaha.shop  # Yeh apna domain hai, isse replace karna
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana  # Grafana service name
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.sujeetkushwaha.shop  # Yeh apna domain hai, isse replace karna
      secretName: grafana-tls  # Agar SSL enable karna hai toh
