prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.sujeetkushwaha.shop  # Yeh apna domain hai, isse replace karna
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-prometheus-kube-prometheus-prometheus  # Prometheus service name
                port:
                  number: 9090
  tls:
    - hosts:
        - prometheus.sujeetkushwaha.shop  # Yeh apna domain hai, isse replace karna
      secretName: prometheus-tls  # Agar SSL enable karna hai toh
